@@ -1,5 +1,5 @@
 forge_version=1.12.2-14.23.4.2739
-mod_version=4.6.21
+mod_version=4.6.22
 minecraft_version=1.12
 group_id=com.gigabit101.quantumstorage
 mod_name=QuantumStorage
