@@ -1,7 +1,10 @@
 package QuantumStorage.inventory;
 
+import QuantumStorage.init.ModItems;
+import QuantumStorage.inventory.slot.SlotBlacklist;
 import invtweaks.api.container.ChestContainer;
 import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.item.ItemStack;
 import net.minecraftforge.items.IItemHandlerModifiable;
 import net.minecraftforge.items.SlotItemHandler;
 import reborncore.common.container.RebornContainer;
@@ -16,7 +19,7 @@ public class ContainerQuantumBag extends RebornContainer
         {
             for (int j1 = 0; j1 < 13; ++j1)
             {
-                this.addSlotToContainer(new SlotItemHandler(invBag, i, 8 + j1 * 18, 11 + l * 18));
+                this.addSlotToContainer(new SlotBlacklist(invBag, i, 8 + j1 * 18, 11 + l * 18, new ItemStack(ModItems.BAG)));
                 i++;
             }
         }
