@@ -4,7 +4,7 @@
         "transform":"forge:default-block",
         "model":"quantumstorage:trashcan",
         "textures":{
-            "particle":"quantumstorage:blocks/trashcan/trash_can_bottom"
+            "particle":"quantumstorage:blocks/trashcan/trashcan-bottom"
         }
     },
     "variants":{
